--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -14,13 +14,21 @@ version = "0.1.0"
 dependencies = [
 	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "persist"},
 	{org = "ballerina", name = "regex"},
+	{org = "ballerina", name = "sql"},
+	{org = "ballerina", name = "time"},
 	{org = "ballerinax", name = "googleapis.drive"},
+	{org = "ballerinax", name = "persist.sql"},
+	{org = "ballerinax", name = "postgresql"},
+	{org = "ballerinax", name = "postgresql.driver"},
 	{org = "wso2", name = "pgvector"}
 ]
 modules = [
-	{org = "Kalhara_JA", packageName = "geronimo_2_0", moduleName = "geronimo_2_0"}
+	{org = "Kalhara_JA", packageName = "geronimo_2_0", moduleName = "geronimo_2_0"},
+	{org = "Kalhara_JA", packageName = "geronimo_2_0", moduleName = "geronimo_2_0.db"}
 ]
 
 [[package]]
@@ -132,6 +140,9 @@ modules = [
 org = "ballerina"
 name = "jballerina.java"
 version = "0.0.0"
+modules = [
+	{org = "ballerina", packageName = "jballerina.java", moduleName = "jballerina.java"}
+]
 
 [[package]]
 org = "ballerina"
@@ -279,6 +290,17 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
+name = "persist"
+version = "1.6.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "persist", moduleName = "persist"}
+]
+
+[[package]]
+org = "ballerina"
 name = "regex"
 version = "1.3.2"
 dependencies = [
@@ -292,12 +314,15 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "sql"
-version = "1.15.0"
+version = "1.16.0"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.object"},
 	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerina", packageName = "sql", moduleName = "sql"}
 ]
 
 [[package]]
@@ -315,6 +340,9 @@ name = "time"
 version = "2.7.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "time", moduleName = "time"}
 ]
 
 [[package]]
@@ -363,8 +391,23 @@ modules = [
 
 [[package]]
 org = "ballerinax"
+name = "persist.sql"
+version = "1.6.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "persist"},
+	{org = "ballerina", name = "sql"},
+	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerinax", packageName = "persist.sql", moduleName = "persist.sql"}
+]
+
+[[package]]
+org = "ballerinax"
 name = "postgresql"
-version = "1.14.0"
+version = "1.15.0"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "io"},
@@ -372,16 +415,22 @@ dependencies = [
 	{org = "ballerina", name = "sql"},
 	{org = "ballerina", name = "time"}
 ]
+modules = [
+	{org = "ballerinax", packageName = "postgresql", moduleName = "postgresql"}
+]
 
 [[package]]
 org = "ballerinax"
 name = "postgresql.driver"
 version = "1.6.1"
+modules = [
+	{org = "ballerinax", packageName = "postgresql.driver", moduleName = "postgresql.driver"}
+]
 
 [[package]]
 org = "wso2"
 name = "pgvector"
-version = "0.3.9"
+version = "0.3.12"
 dependencies = [
 	{org = "ballerina", name = "log"},
 	{org = "ballerina", name = "sql"},
